# arkanoid

./: .gitignore  CMakeLists.txt  README.md
src/: LICENSE  README.md  main.c
src/resources/: destroy.h  hit.h  loose.h  reset.h
